--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap');
+:root{
+  background-color: #161616;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.headerName {
+  width: auto;
+  padding: 0.2rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.headerName h1 {
+  font-family: "Zeyada", serif;
+  color: white;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 3em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.intro h2 {
+  font-family: "Quattrocento", serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 3em;
+  text-align: center;
 }
 
-.card {
-  padding: 2em;
+.carousel-container {
+  /* max-width: 400px; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.read-the-docs {
-  color: #888;
+.slick-prev, .slick-next {
+  color: white;
+  z-index: 1;
+}
+
+.slick-dots li button:before {
+  color: white;
+}
+
+.slick-dots li.slick-active button:before {
+  color: #ffffff;
+}
+
+.title {
+  font-family: "Quattrocento", serif;
+  font-weight: 700;
+  font-style: normal;
 }
